--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
     <head>
         <title>Design24/7</title>
-        <link rel="stylesheet" href="stylesheet">
+        <link rel="stylesheet" href="style.css">
     </head>
     <body>
         <header>
